UPDATE: Update .prettierrc to set new formatting rules for code styling, including using semicolons, reducing tab width, adding trailing commas, avoiding tabs, and limiting line length to 80 characters

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-    "printWidth": 100,
-    "semi": false,
     "singleQuote": true,
-    "tabWidth": 4,
-    "trailingComma": "es5"
-  }
+    "semi": true,
+    "tabWidth": 2,
+    "trailingComma": "all",
+    "useTabs": false,
+    "printWidth": 80
+}
